--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<h1>Goa</h1> <br>
+	<p>It is India's smallest state by area and fourth-smallest by population. Goa has the highest GDP per capita among all Indian states</p>
+	<ol>
+		<li><strong>Anjuna Beach</strong></li>
+		<li><strong>Calangute Beach</strong></li>
+		<li><strong>Fort Aguada</strong></li>
+		<li><strong>Dudhsagar Waterfalls</strong></li>
+		<li><strong>The Church of Our Lady of Immaculate Conception</strong></li>
+	</ol>
+	<ul>
+		<li><strong>Pork vindaloo</strong></li>
+		<li><strong>Crab xec xec</strong></li>
+		<li><strong>Prawn balchão</strong></li>
+		<li><strong>Sanna</strong></li>
+		<li><strong>Goan red rice</strong></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
