--- a/main.html
+++ b/main.html
@@ -9,22 +9,26 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<h1>Goa</h1> <br>
-	<p>It is India's smallest state by area and fourth-smallest by population. Goa has the highest GDP per capita among all Indian states</p>
-	<ol>
-		<li><strong>Anjuna Beach</strong></li>
-		<li><strong>Calangute Beach</strong></li>
-		<li><strong>Fort Aguada</strong></li>
-		<li><strong>Dudhsagar Waterfalls</strong></li>
-		<li><strong>The Church of Our Lady of Immaculate Conception</strong></li>
-	</ol>
-	<ul>
-		<li><strong>Pork vindaloo</strong></li>
-		<li><strong>Crab xec xec</strong></li>
-		<li><strong>Prawn balchão</strong></li>
-		<li><strong>Sanna</strong></li>
-		<li><strong>Goan red rice</strong></li>
-	</ul>
+	<header>
+		<h1>My Favorite Holiday Destination: Bali</h1>
+	</header>
+	<main>
+		<p>Bali is an island and province of Indonesia known for its beautiful beaches, stunning scenery, and unique culture. It is a popular tourist destination that attracts millions of visitors every year.</p>
+		<ol>
+			<li><strong>Ubud Monkey Forest</strong> - A nature reserve and Hindu temple complex in Ubud that is home to hundreds of monkeys.</li>
+			<li><strong>Tanah Lot Temple</strong> - A beautiful temple located on a rock formation in the sea, one of the most photographed tourist attractions in Bali.</li>
+			<li><strong>Mount Batur</strong> - An active volcano that offers breathtaking views of Bali and its surroundings.</li>
+			<li><strong>Tegallalang Rice Terraces</strong> - A UNESCO World Heritage site that features stunning rice terraces and traditional Balinese irrigation systems.</li>
+			<li><strong>Uluwatu Temple</strong> - A beautiful temple located on a cliff overlooking the ocean, famous for its Kecak dance performances.</li>
+		</ol>
+		<ul>
+			<li><em>Nasi Goreng</em> - A delicious Indonesian fried rice dish that is often served with chicken, shrimp, and vegetables.</li>
+			<li><em>Mie Goreng</em> - Another popular Indonesian fried noodle dish that is often served with chicken, shrimp, and vegetables.</li>
+			<li><em>Sate</em> - Grilled meat skewers that are marinated in a mixture of spices and served with peanut sauce.</li>
+			<li><em>Gado-gado</em> - A traditional Indonesian salad that features boiled vegetables, tofu, and tempeh, topped with peanut sauce.</li>
+			<li><em>Babi Guling</em> - A Balinese roasted suckling pig dish that is often served with rice and vegetables.</li>
+		</ul>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
