--- a/main.html
+++ b/main.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<title>My Favorite Holiday Destination</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-
 	<header>
 		<h1>My Favorite Holiday Destination: Bali</h1>
 	</header>
@@ -29,9 +26,5 @@
 			<li><em>Babi Guling</em> - A Balinese roasted suckling pig dish that is often served with rice and vegetables.</li>
 		</ul>
 	</main>
-    <script type="text/javascript" src="./script.js">
-</script>
-
 </body>
-
-</html>
+</html> 
