--- a/main.html
+++ b/main.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-	<title>My Favorite Holiday Destination</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-	<header>
-		<h1>My Favorite Holiday Destination: Bali</h1>
-	</header>
-	<main>
-		<p>Bali is an island and province of Indonesia known for its beautiful beaches, stunning scenery, and unique culture. It is a popular tourist destination that attracts millions of visitors every year.</p>
-		<ol>
-			<li><strong>Ubud Monkey Forest</strong> - A nature reserve and Hindu temple complex in Ubud that is home to hundreds of monkeys.</li>
-			<li><strong>Tanah Lot Temple</strong> - A beautiful temple located on a rock formation in the sea, one of the most photographed tourist attractions in Bali.</li>
-			<li><strong>Mount Batur</strong> - An active volcano that offers breathtaking views of Bali and its surroundings.</li>
-			<li><strong>Tegallalang Rice Terraces</strong> - A UNESCO World Heritage site that features stunning rice terraces and traditional Balinese irrigation systems.</li>
-			<li><strong>Uluwatu Temple</strong> - A beautiful temple located on a cliff overlooking the ocean, famous for its Kecak dance performances.</li>
-		</ol>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
+	<h1> Holiday Vacation</h1>
+	<br>
+	<p> A vocation is an occupation to which a person is especially drawn or for which they are suited, trained or qualified </p>
+	<p> <ol>
+		<strong> <em>
+				<li> Beautiful view</li>
+				<li> Awsome rides </li>
+				<li> food </li>
+				<li> culture </li>
+				<li> Tradition </li>
+		</strong> </em>
+	</ol>
+</p>
+	<p>
 		<ul>
-			<li><em>Nasi Goreng</em> - A delicious Indonesian fried rice dish that is often served with chicken, shrimp, and vegetables.</li>
-			<li><em>Mie Goreng</em> - Another popular Indonesian fried noodle dish that is often served with chicken, shrimp, and vegetables.</li>
-			<li><em>Sate</em> - Grilled meat skewers that are marinated in a mixture of spices and served with peanut sauce.</li>
-			<li><em>Gado-gado</em> - A traditional Indonesian salad that features boiled vegetables, tofu, and tempeh, topped with peanut sauce.</li>
-			<li><em>Babi Guling</em> - A Balinese roasted suckling pig dish that is often served with rice and vegetables.</li>
+			<b> <i>
+				<li> Dosa</li>
+				<li> Iddli </li>
+				<li> uttpam </li>
+				<li> daal-bati </li>
+				<li> dukla </li>
+			<b> </i>
 		</ul>
-	</main>
+	</p>
+	
 </body>
-</html> 
+
+</html>
